--- a/files/example_homework_0.html
+++ b/files/example_homework_0.html
@@ -429,10 +429,13 @@ summary {
 </div>
 
 
-<pre><code>## Warning: package &#39;knitr&#39; was built under R version 4.0.3</code></pre>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.kaggle.com/mrisdal/exploring-survival-on-the-titanic">Exploring Survival on the Titanic</a></p>
-<p>This example is important because it is an R Notebook on Titanic data set. Titanic is considered as one of the Data Science 101 data set and this notebook provides a good exploratory data analysis. It is also a Kaggle Kernel, which is a very good source for this kind of example R codes. The notebook also covers feature engineering, missing data imputation and modeling.</p></li>
+<li><p><a href="https://www.kaggle.com/headsortails/personalised-medicine-eda-with-tidy-r">Personalised Medicine - EDA with tidy R</a></p>
+<p>This is an Exploratory Data Analysis for the “Personalized Medicine”: Redefining Cancer Treatment challenge. ggplot2 and the tidyverse tools to study and visualise the structures in the data.</p></li>
+<li><p><a href="https://r-dir.com/reference/datasets.html">Datasets to work with</a></p>
+<p>This article gives useful links for handful of sources for data to work with..</p></li>
+<li><p><a href="https://www.r-graph-gallery.com/">R Graph Gallery</a></p>
+<p>This is a R graph gallery, a collection of charts made with the R programming language.</p></li>
 </ol>
 
 
