hw2-change in comment

--- a/files/hw2/hw2.html
+++ b/files/hw2/hw2.html
@@ -15755,7 +15755,7 @@ z: 0.16271026152351578
 <h3 id="Comments:">Comments:<a class="anchor-link" href="#Comments:">&#182;</a></h3><ul>
 <li>Gestures 1 and 6 and 4 and 5 are not successfully seperated from each other.</li>
 <li>Gestures 2,7 and 8 are seperated from other classes more successfully.</li>
-<li>Although there are some overlaps between different gesture classes, seperately they are clustered in a good way. </li>
+<li>Although there are some overlaps between different gesture classes, considering seperately they are clustered successfully and this can be used for classification. </li>
 </ul>
 
 </div>
