hw2-comment change

--- a/files/hw2/hw2.html
+++ b/files/hw2/hw2.html
@@ -15754,8 +15754,10 @@ z: 0.16271026152351578
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Comments:">Comments:<a class="anchor-link" href="#Comments:">&#182;</a></h3><ul>
 <li>Gestures 1 and 6 and 4 and 5 are not successfully seperated from each other.</li>
-<li>Gestures 2,7 and 8 are seperated from other classes more successfully.</li>
-<li>Although there are some overlaps between different gesture classes, considering seperately they are clustered successfully and this can be used for classification. </li>
+<li>Gestures 2 and 7 are seperated from other classes more successfully.</li>
+<li>Gestures 3 and 4 look like spreaded over some places, they are not clustered successfully.</li>
+<li>Most instances of gesture 7 are clustered in the down-left corner and seperated from other classes but it has also some instances mixed with other classes.</li>
+<li>Although there are some overlaps between different gesture classes, considering seperately this clustering can be used for classification.</li>
 </ul>
 
 </div>
